--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <html>
-    <head>
-        <title>Silencer</title>
-        <link rel="stylesheet" href="css/app.css">
-        <script src="js/p5.min.js"></script>
-        <script src="js/p5.sound.min.js"></script>
-        <script src="js/p5.dom.min.js"></script>
-        <script src="js/record.js"></script>
-    </head>
+  <head>
+    <title>Silencer</title>
+    <link rel="stylesheet" href="css/app.css" />
+    <script src="js/p5.min.js"></script>
+    <script src="js/p5.sound.min.js"></script>
+    <script src="js/p5.dom.min.js"></script>
+  </head>
 
-    <body>
-        <h1 class="silencer-app-title">
-            silencer
-        </h1>
+  <body>
+    <h1 class="silencer-app-title">
+      silencer
+    </h1>
 
-        <!-- <div class="silencer-actions-section">
+    <div class="silencer-image-container">
+      <img src="images/yigit.jpg" class="yigit" />
+      <img src="images/finger.png" class="finger" />
+    </div>
+
+    <!-- <div class="silencer-actions-section">
             <div class="silencer-actions-section-action start-record-action">
                 <button class="record-action-button start-record-action-button">
                     start recording
@@ -26,5 +30,6 @@
                 </button>
             </div>
         </div> -->
-    </body>
+    <script src="js/record.js"></script>
+  </body>
 </html>
