Add canvas to header

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="silencer-image-container">
       <img src="images/yigit.jpg" class="yigit" />
       <img src="images/finger.png" class="finger" />
+      <img src="images/teardrops.gif" class="teardrops" />
     </div>
 
     <!-- <div class="silencer-actions-section">
