Finalize v2 main functionality

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Silencer</title>
+    <meta charset="UTF-8" />
     <link rel="stylesheet" href="css/app.css" />
     <script src="js/p5.min.js"></script>
     <script src="js/p5.sound.min.js"></script>
@@ -14,8 +15,12 @@
 
     <div class="silencer-image-container">
       <img src="images/yigit.jpg" class="yigit" />
-      <img src="images/finger.png" class="finger" />
+      <img src="images/hand.png" class="finger" />
       <img src="images/teardrops.gif" class="teardrops" />
+
+      <div class="quote-container">
+        <p class="quote"></p>
+      </div>
     </div>
 
     <!-- <div class="silencer-actions-section">
