--- a/index.html
+++ b/index.html
@@ -13,8 +13,20 @@
       silencer
     </h1>
 
+    <div class="slide-container">
+      <input
+        type="range"
+        min="1"
+        max="10"
+        value="5"
+        step="0.1"
+        class="slider"
+      />
+
+      <p class="slider-value">5</p>
+    </div>
+
     <div class="silencer-image-container">
-      <img src="images/yigit.jpg" class="yigit" />
       <img src="images/hand.png" class="finger" />
       <img src="images/teardrops.gif" class="teardrops" />
 
@@ -36,6 +48,7 @@
                 </button>
             </div>
         </div> -->
+    <script src="js/slider.js"></script>
     <script src="js/record.js"></script>
   </body>
 </html>
