Vignent gradient implementation.

--- a/index.html
+++ b/index.html
@@ -33,21 +33,9 @@
       <div class="quote-container">
         <p class="quote"></p>
       </div>
+
+      <div class="vignent"></div>
     </div>
-
-    <!-- <div class="silencer-actions-section">
-            <div class="silencer-actions-section-action start-record-action">
-                <button class="record-action-button start-record-action-button">
-                    start recording
-                </button>
-            </div>
-
-            <div class="silencer-actions-section-action end-record-action">
-                    <button class="record-action-button end-record-action-button">
-                    end recording
-                </button>
-            </div>
-        </div> -->
     <script src="js/slider.js"></script>
     <script src="js/record.js"></script>
   </body>
