--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   </head>
 
   <body>
-    <h1 class="silencer-app-title">
-      silencer
-    </h1>
+    <header class="silencer-app-title">
+      <!-- <h1>silencer</h1> -->
+      <img class="logo" src="/images/logo_silencer.png" />
+    </header>
 
     <div class="slide-container">
       <input
@@ -27,8 +28,13 @@
     </div>
 
     <div class="silencer-image-container">
+      <img src="images/yigit.jpg" class="yigit" />
+      <img src="images/yigit_angry.jpg" class="yigit_angry" />
+
+      <img src="images/fire.gif" class="fire left" />
+      <img src="images/fire.gif" class="fire right" />
+
       <img src="images/hand.png" class="finger" />
-      <img src="images/teardrops.gif" class="teardrops" />
 
       <div class="quote-container">
         <p class="quote"></p>
